phases/phase-5-kyverno/policies/require-signed-images.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: require-signed-images
spec:
  validationFailureAction: Enforce
  rules:
    - name: require-signed-images
      match:
        any:
          - resources:
              kinds:
                - Pod
      verifyImages:
        - imageReferences:
            - "registry.ztcr.local:8443/*"
          mutateDigest: false
          verifyDigest: false
          attestors:
            - entries:
                - keys:
                    publicKeys: |-
                      -----BEGIN PUBLIC KEY-----
                      MFkwEwYHKoZIzj0CAQYIKoZIzj0DAQcDQgAEynp4s0sYJDDKTr/8EOAywFCvJ+EZ
[...]
                      -----END PUBLIC KEY-----
                    rekor:
                      ignoreTlog: true
